# CDSniffer

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  README.md  ROADMAP_REPORT.md  pyproject.toml
cd_sniffer/: __init__.py  archive_index.py  cli.py  config.py  core.py  correlator.py  dmm.py  format_analyzers.py  gui.py  ipc.py  paths.py  paz_archive.py  scanner.py  schema_validation.py  windows.py
schemas/: cdsniffer-archive-correlation.schema.json  cdsniffer-archive-index.schema.json  cdsniffer-archive.schema.json  cdsniffer-correlation.schema.json  cdsniffer-output.schema.json
tests/: test_gui_smoke.py  test_ipc.py  test_scanner.py
