[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cdsniffer"
version = "0.1.0"
description = "Local Windows memory sniffer for Crimson Desert mission data"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Codex" }]

[project.scripts]
cdsniffer = "cd_sniffer.cli:main"
cdsniffer-gui = "cd_sniffer.gui:main"

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
unpack = ["cryptography>=42", "lz4>=4.3"]
schema = ["jsonschema>=4.22"]
full = ["PySide6>=6.7", "cryptography>=42", "lz4>=4.3", "jsonschema>=4.22"]

[tool.setuptools]
packages = ["cd_sniffer"]
include-package-data = true

[tool.setuptools.package-data]
cd_sniffer = ["assets/*.svg"]
